fin de structure

--- a/index.html
+++ b/index.html
@@ -7,42 +7,90 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
-        <div></div>
-        <div></div>
-        <div></div>
-    </section>
+    <header>
+        <div>START CSS</div>
+        <div>PORTFOLIO</div>
+        <div>ABOUT</div>
+        <div>CONTACT</div>
+    </header>
 
     <section>
         <div></div>
-        <div></div>
-        <div></div>
+        <div>START CSS</div>
+        <div>Graphic Artist - Web Designer - Illustrator</div>
     </section>
         
     <section>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div>PORTFOLIO</div>
+        <div>
+            <div><img src="./public/image/img/portfolio/cabin.png" alt=""></div>
+            <div><img src="./public/image/img/portfolio/cake.png" alt=""></div>
+            <div><img src="./public/image/img/portfolio/circus.png" alt=""></div>
+        </div>
+        <div>
+            <div><img src="./public/image/img/portfolio/game.png" alt=""></div>
+            <div><img src="./public/image/img/portfolio/safe.png" alt=""></div>
+            <div><img src="./public/image/img/portfolio/submarine.png" alt=""></div>
+        </div>
     </section>
 
     <section>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div>ABOUT</div>
+        <div>
+            <p>
+                Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.
+            </p>
+        </div>
+        <div>
+            <p>
+                You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!
+            </p>
+        </div>
     </section>
 
     <section>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div>CONTACT ME</div>
+        <div>
+            <div>Name</div>
+            <div>Email Adresse</div>
+            <div>Phone Number</div>
+            <div>Message</div>
+        </div>
+        <div>
+            <button>Send</button>
+        </div>
     </section>
 
     <section>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div>
+            <div>
+                <p>LOCATION</p>
+            </div>
+            <div>
+                <p>
+                    2215 John Daniel Drive
+                    <br>
+                    Clark, MO65243
+                </p>
+            </div>
+        </div>
+        <div>
+            <div>
+                <p>AROUND THE WEB</p>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
+        <div>
+            <p>ABOUT FREELANCE</p>
+            <p>Freelance is a free to use, MIT licensed Bootstrap theme created by Start Bootstrap</p>
+        </div>
     </section>
 
-    <footer></footer>
+    <footer>
+        Copyright © Your Website 2020
+    </footer>
 </body>
 </html>
