--- a/index.html
+++ b/index.html
@@ -4,38 +4,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Start Css</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Osmanya&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./public/style.css"> 
 </head>
 <body>
     <header>
-        <div>START CSS</div>
-        <div>PORTFOLIO</div>
-        <div>ABOUT</div>
-        <div>CONTACT</div>
+        <div class="startCSS">STARTCSS</div>
+        <nav>
+            <div>PORTFOLIO</div>
+            <div>ABOUT</div>
+            <div>CONTACT</div>
+        </nav>
     </header>
 
-    <section>
-        <div></div>
-        <div>START CSS</div>
-        <div>Graphic Artist - Web Designer - Illustrator</div>
+    <section class="sectionRose">
+        <div>
+            <img class="section1img" src="./public/image/img/avataaars.svg" alt="">
+        </div>
+        <div class="section1txt">
+            <div>
+                <h1>START CSS</h1>
+            </div>
+            <div class="section1bottom">
+                Graphic Artist - Web Designer - Illustrator
+            </div>
+        </div>
     </section>
         
     <section>
-        <div>PORTFOLIO</div>
         <div>
-            <div><img src="./public/image/img/portfolio/cabin.png" alt=""></div>
-            <div><img src="./public/image/img/portfolio/cake.png" alt=""></div>
-            <div><img src="./public/image/img/portfolio/circus.png" alt=""></div>
+            <div>
+                <h3 class="coloredPolice">PORTFOLIO</h3>
+            </div>
+            <div class="imgStyle">
+                <div><img class="imgSize" src="./public/image/img/portfolio/cabin.png" alt=""></div>
+                <div><img class="imgSize" src="./public/image/img/portfolio/cake.png" alt=""></div>
+                <div><img class="imgSize" src="./public/image/img/portfolio/circus.png" alt=""></div>
+            </div>
+            <div class="imgStyle">
+                <div><img class="imgSize" src="./public/image/img/portfolio/game.png" alt=""></div>
+                <div><img class="imgSize" src="./public/image/img/portfolio/safe.png" alt=""></div>
+                <div><img class="imgSize" src="./public/image/img/portfolio/submarine.png" alt=""></div>
+            </div>
         </div>
-        <div>
-            <div><img src="./public/image/img/portfolio/game.png" alt=""></div>
-            <div><img src="./public/image/img/portfolio/safe.png" alt=""></div>
-            <div><img src="./public/image/img/portfolio/submarine.png" alt=""></div>
-        </div>
+        
     </section>
 
-    <section>
-        <div>ABOUT</div>
+    <section class="sectionRose">
+        <div>
+            <h3>ABOUT</h3>
+        </div>
         <div>
             <p>
                 Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.
@@ -49,22 +69,42 @@
     </section>
 
     <section>
-        <div>CONTACT ME</div>
         <div>
-            <div>Name</div>
-            <div>Email Adresse</div>
-            <div>Phone Number</div>
-            <div>Message</div>
-        </div>
-        <div>
-            <button>Send</button>
+            <div>
+                <h3 class="coloredPolice">
+                    <b>CONTACT ME</b>
+                </h3>
+            </div>
+            <div class="coloredPolice">
+                <div> 
+                    <p>Name</p>
+                    <input type="">
+                </div>
+                <div>
+                    <p>Email Adresse</p>
+                    <input type="">
+                </div>
+                <div>
+                    <p>Phone Number</p>
+                    <input type="">
+                </div>
+                <div>
+                    <p>Message</p>
+                    <input type="">
+                </div>
+            </div>
+            <div>
+                <button class="sendButton">Send</button>
+            </div>
         </div>
     </section>
 
-    <section>
+    <section class="sectionGrey">
         <div>
             <div>
-                <p>LOCATION</p>
+                <p>
+                    <h5>LOCATION</h5>
+                </p>
             </div>
             <div>
                 <p>
@@ -76,7 +116,9 @@
         </div>
         <div>
             <div>
-                <p>AROUND THE WEB</p>
+                <p>
+                    <h5>AROUND THE WEB</h5>
+                </p>
                 <div></div>
                 <div></div>
                 <div></div>
@@ -84,7 +126,9 @@
             </div>
         </div>
         <div>
-            <p>ABOUT FREELANCE</p>
+            <p>
+                <h5>ABOUT FREELANCE</h5>
+            </p>
             <p>Freelance is a free to use, MIT licensed Bootstrap theme created by Start Bootstrap</p>
         </div>
     </section>
